kubernetes/applications/media/manifests/bazarr/bazarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.5.3
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/media
            - name: run
              mountPath: /run
          ports:
            - containerPort: 6767
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: run
          emptyDir: {}
